--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                     </ul>
                 </div>
                 <div>
+                    <h5>Social</h5>
+                    <a href="http://instagram.com/">Instagram</a>
+                    <a href="http://facebook.com/">Facebook</a>
+                    <a href="http://twitter.com/">Twitter</a>
+                    <a href="http://youtube.com/">YouTube</a>
+                </div>
+                <div>
                     Tel: 1-206-555-1234 <br />
                     Email: campsites@nucamp.co
                 </div>
