--- a/index-code-challenge.html
+++ b/index-code-challenge.html
@@ -75,10 +75,12 @@
                                 </label>
                                 <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
                                     <label class="btn btn-secondary active">
-                                        <input class="btn btn-primary" type="radio" name="siteType" id="siteTent" autocomplete="off" checked>Tent
+                                        <input class="btn btn-primary" type="radio" name="siteType" id="siteTent"
+                                            autocomplete="off" checked>Tent
                                     </label>
                                     <label class="btn btn-secondary">
-                                        <input class="btn btn-primary" type="radio" name="siteType" id="siteRv" autocomplete="off">RV
+                                        <input class="btn btn-primary" type="radio" name="siteType" id="siteRv"
+                                            autocomplete="off">RV
                                     </label>
                                 </div>
                             </div>
@@ -233,13 +235,13 @@
                             own reviews!</p>
                     </div>
                 </div>
-            
+
 
                 <div class="card text-center">
                     <div class="card-header">
                         <h3 id="card-head" class="text-center">Featured Campsites</h3>
                     </div>
-                    <img src="img/react-lake-thumb.jpg" class="card-img alt="React Lake Campground">
+                    <img src="img/react-lake-thumb.jpg" class="card-img alt=" React Lake Campground">
                     <div class="card-body">
                         <h4 class="card-title">React Lake Campground</h4>
                         <p class="card-text">Nestled in the foothills of the Chrome Mountains, this campground
@@ -251,7 +253,7 @@
                     <div class="card-header">
                         <h3 id="card-head" class="text-center">Our Community Partners</h3>
                     </div>
-                    <img src="img/bootstrap-thumb.png" class="card-img alt="Bootstrap Outfitters">
+                    <img src="img/bootstrap-thumb.png" class="card-img alt=" Bootstrap Outfitters">
                     <div class="card-body">
                         <h4 class="card-title">Bootstrap Outfitters</h4>
                         <p class="card-text">Bootstrap Outfitters supplies you with gear you need at prices
