--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
                             <div class='row form-group'>
                                 <div class='col'>
-                                    <button class="btn text-white bg-secondary" data-dismiss="modal" type='button'>Cancel</button>
+                                    <button class="btn text-white bg-secondary" data-dismiss="modal"
+                                        type='button'>Cancel</button>
                                     <button class="btn text-white bg-primary" type='submit'>Search</button>
                                 </div>
                             </div>
@@ -207,14 +208,10 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
                             <i class="fa fa-pause"></i>
                         </button>
-                        <button class="btn btn-danger btn-sm" id="carouselPlay">
-                            <i class="fa fa-play"></i>
-                        </button>
-                    </div>
+                     
                 </div>
             </div>
         </div>
@@ -315,15 +312,20 @@
         <script>
             $(function() {
                 $(".carousel").carousel( { interval: 2000, pause: "false" } );
-                $("#carouselPause").click(function(){
-                    $(".carousel").carousel("pause");
-                });
-                $("#carouselPlay").click(function(){
-                    $(".carousel").carousel("cycle");
+                $("#carouselButton").click(function(){
+                    if ($("#carouselButton").children("i").hasClass("fa-pause")) {
+                        $(".carousel").carousel("pause");
+                        $("#carouselButton").children("i").removeClass("fa-pause");
+                        $("#carouselButton").children("i").addClass("fa-play");
+                    } else {
+                        $(".carousel").carousel("cycle");
+                        $("#carouselButton").children("i").removeClass("fa-play");
+                        $("#carouselButton").children("i").addClass("fa-pause"); 
+                    }
                 });
             });
         </script>
 
-</body>
+    </body>
 
 </html>
