--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css     -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="css/styles.css" />
-
+    <!-- endbuild -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <title>NuCamp: A Better Way To Camp </title>
 </head>
 
@@ -74,20 +72,18 @@
                                 </label>
                                 <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
                                     <label class="btn btn-success active">
-                                        <input type="radio" name="siteType" id="siteTent"
-                                            autocomplete="off" checked>Tent
+                                        <input type="radio" name="siteType" id="siteTent" autocomplete="off"
+                                            checked>Tent
                                     </label>
                                     <label class="btn btn-primary">
-                                        <input type="radio" name="siteType" id="siteRv"
-                                            autocomplete="off">RV
+                                        <input type="radio" name="siteType" id="siteRv" autocomplete="off">RV
                                     </label>
                                 </div>
                             </div>
 
                             <div class='row form-group'>
                                 <div class='col'>
-                                    <button class="btn btn-secondary" data-dismiss="modal"
-                                        type='button'>Cancel</button>
+                                    <button class="btn btn-secondary" data-dismiss="modal" type='button'>Cancel</button>
                                     <button class="btn btn-primary" type='submit'>Search</button>
                                 </div>
                             </div>
@@ -208,10 +204,10 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
-                        <button class="btn btn-danger btn-sm" id="carouselButton">
-                            <i class="fa fa-pause"></i>
-                        </button>
-                     
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <i class="fa fa-pause"></i>
+                    </button>
+
                 </div>
             </div>
         </div>
@@ -304,13 +300,13 @@
             </div>
         </footer>
 
-        <!-- JQuery must come first, then Popper.js, then Bootstrap JavaScript plugins.-->
+        <!-- build:js js/main.js -->
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="js/scripts.js"></script>
+        <!-- endbuild -->
 
-        <script src="js/scripts.js" ></script>
-
-    </body>
+</body>
 
 </html>
